# videographer

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  gpu.md
.github/workflows/: build-and-test.yml  build.yml  cmake-workflow.yml  unit-tests.yml
scratchpad/: .gitignore  pipeline.cpp  tags.c
src/: CMakeLists.txt  arguments.cpp  arguments.h  greeter.cpp  greeter.h  main.cpp  manager.cpp  manager.h
src/telemetry/: CMakeLists.txt  datapoint.h  enum_field.h  field.cpp  field.h  file.cpp  file.h  fit_file.cpp  fit_file.h  fit_parser.cpp  fit_parser.h  parser.cpp  parser.h  telemetry.cpp  telemetry.h  track.h  value.h
src/utils/: CMakeLists.txt  args.cpp  args.h  argument_parser.cpp  argument_parser.h  geo.cpp  geo.h  version.h
src/utils/logging/: CMakeLists.txt  backend.cpp  backend.h  log_level.h  logger.cpp  logger.h  sink.h  stream_sink.cpp  stream_sink.h
src/video/: CMakeLists.txt  generator.cpp  generator.h  overlay_drawer.cpp  overlay_drawer.h  pipeline.cpp  pipeline.h
src/video/overlay/: CMakeLists.txt  layout.cpp  layout.h  layout_parser.cpp  layout_parser.h  overlay.cpp  overlay.h  widget.h
src/video/overlay/widget/: CMakeLists.txt  chart_widget.cpp  chart_widget.h  color.cpp  color.h  line_widget.cpp  line_widget.h  map_widget.cpp  map_widget.h  moving_chart_widget.cpp  moving_chart_widget.h  offset_widget.cpp  offset_widget.h  rectangle_widget.cpp  rectangle_widget.h  string_widget.cpp  string_widget.h  text_align.cpp  text_align.h  text_widget.cpp  text_widget.h  timecode_widget.cpp  timecode_widget.h  timestamp_widget.cpp  timestamp_widget.h  value_widget.cpp  value_widget.h  widget.cpp  widget.h
test/: CMakeLists.txt  config_file_parsing_test.cpp  greeter_test.cpp  main.cpp
test/telemetry/: CMakeLists.txt  fit_file_test.cpp  fit_parser_test.cpp
test/testdata/: CMakeLists.txt  correct.fit  correct.gpx  different.xml  full.conf  layout.xml  partial.conf  template.xml
test/testutils/: CMakeLists.txt  testdata.h
test/utils/: CMakeLists.txt  args_test.cpp  argument_parser_test.cpp
test/utils/logging/: CMakeLists.txt  logger_test.cpp
test/video/: CMakeLists.txt
test/video/overlay/: CMakeLists.txt  color_test.cpp  layout_parser_test.cpp  layout_test.cpp
tools/: README.md  loc.sh
tools/alignment/: align.py  requirements.txt
